# my-portfolio-test

./: .gitignore  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  app.py  environment.yaml  index.html  index_html_generator.py  pyproject.toml  template_index.html
.github/workflows/: deploy.yml
data/: about.json  blog.json  contact.json  navbar.json  portfolio.json  resume.json  sidebar.json
docs/: ARCHITECTURE.md  GETTING_STARTED.md  OAUTH_SETUP.md  TEMPLATE_REPO_SETUP.md
oauth-proxy/: .env.example  .gitignore  README.md  package.json  server.js
react-cms/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
react-cms/src/: App.tsx  index.css
react-cms/src/components/: ContentCard.tsx  JsonEditor.tsx  Layout.tsx
react-cms/src/components/auth/: AuthCallback.tsx  LoginButton.tsx  ProtectedRoute.tsx
react-cms/src/components/forms/: AboutForm.tsx  BlogForm.tsx  ContactForm.tsx  FormRouter.tsx  NavbarForm.tsx  PortfolioForm.tsx  ResumeForm.tsx  SidebarForm.tsx
react-cms/src/components/setup/: FirstTimeSetup.tsx
react-cms/src/config/: constants.ts  github.ts
react-cms/src/contexts/: AuthContext.tsx
react-cms/src/hooks/: useApi.ts  useGitHub.ts  useRepo.ts
react-cms/src/pages/: Dashboard.tsx  DashboardWrapper.tsx  Landing.tsx
react-cms/src/services/: auth.ts  github-api.ts
react-cms/src/types/: index.ts
react-cms/src/utils/: tokenStorage.ts
templates/: about.html  backend_index.html  blog.html  contact.html  edit.html  navbar.html  portfolio.html  resume.html  sidebar.html
