[tool.poetry]
name = "almost-a-cms"
version = "0.1.0"
description = "A basic CMS for vCard Personal Portfolio"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"
jinja2 = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"